# FsTUC-Firmware_Recruitment_Challange_January_2026-public-release

./: CMakeLists.txt  README.md  Requirements.md  TUI.go  build_tui.py  go.mod  setup.ps1  setup.sh
lib/include/: ADC.h  BatteryPack.h  CircuitSim.h  Clock.h  EEPROM.h  Errno.h  ErrorRegister.h  FSM.h  HAL_io.h  STM32_ARM_MAP.h  TestTools.h  contactor.h
lib/src/: ADC.c  BatteryPack.c  CircuitSim.c  Clock.c  EEPROM.c  Errno.c  ErrorRegister.c  FSM.c  HAL_io.c  contactor.c
setup/: setup.ps1  setup.sh
tests/: ADC_Test_Runner.c  BatteryPack_Test_Runner.c  Contactor_Runner.c  EEPROM_Runner.c  Test_Utils.c  Test_Utils.h
tests/mocks/: HAL_io_mock.c  HAL_io_mock.h  HardwareMoch.h
